Updates for Java 11 (#5002)
Take advantage of some post-Java 8 language features.